# foundation-developer

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  CMakePackage.cmake  Dockerfile  Dockerfile.prerelease  LICENSE  README.md  RELEASENOTES.md  foundation-developer.sublime-project  installer  overview.dot
.github/workflows/: apt-ci.yml  check-installer-url.yml  dockerfile-ci.yml  homebrew-ci.yml  mulle-sde-ci.yml  semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
.travis.d/: PACKAGES-aux  before_install.darwin  script
assets/dox/: TOC.md
cola/: description.md.bud  executables.md.bud  install.md.bud  properties.plist  usage.md.bud  you-are-here.md.bud
dox/: Makefile  legacy-workflow.md  relationships.dot
mulle-project/: formula-info.sh  version-info.sh
src/MulleFoundation/cmake/: inherit
src/MulleFoundation/objc/: dependency  inheritmarks
src/MulleFoundation/objc-developer/: inherit
src/foundation/apple-clang/: environment  usage
src/foundation/apple-clang/share/craft/definition.darwin/: README.md
src/foundation/apple-clang/share/craft/definition.darwin.help/: README.md
src/foundation/compat-objc/: inherit  inheritmarks  sourcetree  sourcetree-executable
src/foundation/compat-objc-developer/: inherit  usage
src/foundation/objc/: dependencies  dependency  environment  environment-init  executable-libraries  inherit  inheritmarks  sourcetree  sourcetree-executable
src/foundation/objc-base/: dependencies  environment  libraries  sourcetree  sourcetree-executable  tool  tool.darwin
src/foundation/objc-cmake/: inherit  usage  version
src/foundation/objc-developer/: inherit  usage
src/foundation/objc-porter/: inherit  usage
src/foundation/objc-porter-runtime/: README.md  environment  sourcetree-executable  tool  tool.darwin  tool.freebsd  tool.linux
src/foundation/travis/: inherit
src/foundation/xcode/: inherit  init  usage
src/mulle-foundation/objc/: inherit
src/mulle-foundation/objc-cmake/: inherit  usage
src/mulle-foundation/objc-developer/: inherit
(+4 files in other folders)
